Fixed alignments

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -249,7 +249,8 @@ th {
 td {
   padding: 10px;
 /*  border: 1px solid #373737; */
- }
+  vertical-align: top;
+}
 
 form {
   background: #f2f2f2;
